fix compilation issue and upgrade version